--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
       type="text/javascript"
       src="js/player.js"
     ></script>
+    <script
+      language="javascript"
+      type="text/javascript"
+      src="js/box.js"
+    ></script>
   </head>
   <body></body>
 </html>
