--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         margin: 0;
       }
     </style>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
     <script
       type="text/javascript"
       src="https://cdn.socket.io/socket.io-1.4.5.js"
