multBox.js class

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     ></script>
     <script
       language="javascript"
+      src="p5.sound.js"
+    ></script>
+    <script
+      language="javascript"
       type="text/javascript"
       src="player.js"
     ></script>
@@ -34,6 +38,11 @@
       language="javascript"
       type="text/javascript"
       src="sketch.js"
+    ></script>
+    <script
+      language="javascript"
+      type="text/javascript"
+      src="multiBox.js"
     ></script>
     <script language="javascript" type="text/javascript" src="box.js"></script>
   </head>
