--- a/index.html
+++ b/index.html
@@ -5,9 +5,127 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>BroswerGame</title>
+
     <style>
-      body {
-        margin: 0;
+      * {
+        margin: 0px;
+        padding: 0px;
+      }
+
+      .area {
+        background: #cde3f5;
+        background: -webkit-linear-gradient(to left, #cde3f5);
+        width: 100%;
+        height: 100vh;
+      }
+
+      .circles {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+      }
+
+      .circles li {
+        position: absolute;
+        display: block;
+        list-style: none;
+        width: 20px;
+        height: 20px;
+        background: rgba(131, 130, 130, 0.151);
+        animation: animate 25s linear infinite;
+        bottom: -150px;
+      }
+
+      .circles li:nth-child(1) {
+        left: 25%;
+        width: 80px;
+        height: 80px;
+        animation-delay: 0s;
+      }
+
+      .circles li:nth-child(2) {
+        left: 10%;
+        width: 20px;
+        height: 20px;
+        animation-delay: 2s;
+        animation-duration: 12s;
+      }
+
+      .circles li:nth-child(3) {
+        left: 70%;
+        width: 20px;
+        height: 20px;
+        animation-delay: 4s;
+      }
+
+      .circles li:nth-child(4) {
+        left: 40%;
+        width: 60px;
+        height: 60px;
+        animation-delay: 0s;
+        animation-duration: 18s;
+      }
+
+      .circles li:nth-child(5) {
+        left: 65%;
+        width: 20px;
+        height: 20px;
+        animation-delay: 0s;
+      }
+
+      .circles li:nth-child(6) {
+        left: 75%;
+        width: 110px;
+        height: 110px;
+        animation-delay: 3s;
+      }
+
+      .circles li:nth-child(7) {
+        left: 35%;
+        width: 150px;
+        height: 150px;
+        animation-delay: 7s;
+      }
+
+      .circles li:nth-child(8) {
+        left: 50%;
+        width: 25px;
+        height: 25px;
+        animation-delay: 15s;
+        animation-duration: 45s;
+      }
+
+      .circles li:nth-child(9) {
+        left: 20%;
+        width: 15px;
+        height: 15px;
+        animation-delay: 2s;
+        animation-duration: 35s;
+      }
+
+      .circles li:nth-child(10) {
+        left: 85%;
+        width: 150px;
+        height: 150px;
+        animation-delay: 0s;
+        animation-duration: 11s;
+      }
+
+      @keyframes animate {
+        0% {
+          transform: translateY(0) rotate(0deg);
+          opacity: 1;
+          border-radius: 0;
+        }
+
+        100% {
+          transform: translateY(-1000px) rotate(720deg);
+          opacity: 0;
+          border-radius: 50%;
+        }
       }
     </style>
 
@@ -27,6 +145,7 @@
       language="javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.js"
     ></script>
+    <!-- <style></style> -->
     <!--
       <script
         language="javascript"
@@ -41,25 +160,40 @@
       ></script>
     -->
 
-    <script
-      language="javascript"
-      src="p5.sound.js"
-    ></script>
+    <script language="javascript" src="p5.sound.js"></script>
     <script
       language="javascript"
       type="text/javascript"
       src="player.js"
     ></script>
     <script language="javascript" type="text/javascript" src="box.js"></script>
-    <script language="javascript" type="text/javascript" src="multiBox.js"></script>
+    <script
+      language="javascript"
+      type="text/javascript"
+      src="multiBox.js"
+    ></script>
     <script
       language="javascript"
       type="text/javascript"
       src="sketch.js"
     ></script>
-   
   </head>
-  <body>
-    <!-- <audio id="song" src="js/start.mp3"></audio> -->
+  <body class="area">
+    <audio id="song" src="start.mp3"></audio>
+
+    <!-- <div class="area"> -->
+    <ul class="circles">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+    <!-- </div> -->
   </body>
 </html>
